--- a/INB1OO/app/src/main/AndroidManifest.xml
+++ b/INB1OO/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false">
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
